--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header role="banner">
         <section class="Logo">
             <figure>
-                <a href="index.HTML"><img src="Images/IMG profil.png" alt="Image profil" img></a>
+                <a href="index.html"><img src="Images/IMG profil.png" alt="Image profil" img></a>
                 <figcaption>Image profil</figcaption>
             </figure>
         </section>
