--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </section>
         <nav>
             <ul>
-                <li><a href="index.HTML "> Accueil </a></li>
-                <li><a href="projet.HTML"> Projets </a></li>
+                <li><a href="index.html"> Accueil </a></li>
+                <li><a href="projet.html"> Projets </a></li>
                 <li><a href=""> Autre </a></li>
             </ul>
         </nav>
