--- a/projet.html
+++ b/projet.html
@@ -17,14 +17,14 @@
     <header role="banner">
         <div class="Logo">
             <figure>
-                <a href="index.HTML"><img src="Images/IMG profil.png" alt="Image profil" img></a>
+                <a href="index.html"><img src="Images/IMG profil.png" alt="Image profil" img></a>
                 <figcaption>Logo</figcaption>
             </figure>
         </div>
         <nav>
             <ul>
-                <li><a href="index.HTML "> Accueil </a></li>
-                <li><a href="projet.HTML"> Projets </a></li>
+                <li><a href="index.html "> Accueil </a></li>
+                <li><a href="projet.html"> Projets </a></li>
                 <li><a href=""> Autre </a></li>
             </ul>
         </nav>
