--- a/projet.html
+++ b/projet.html
@@ -33,65 +33,76 @@
 
 
     <main role="main" class="projet">
-        <section role="contentinfo" aria-valuetext="Projet 1">
-            <figure>
-                <img src="Images/HTML5.png" alt="Projet1">
-                <figcaption> Projet 1</figcaption>
-            </figure>
-            <h2>Projet 1</h2>
-            <p> Présentation Projet 1,
-                <br>
-                explication du contenue détaillant le projet
-            </p>
-        </section>
 
-        <section role="contentinfo" aria-valuetext="Projet 2">
-            <figure>
-                <img src="Images/CSS3.png" alt="Projet2">
-                <figcaption> Projet 1</figcaption>
-            </figure>
-            <h2>Projet 2</h2>
-            <p> Présentation Projet 2,
-                <br>
-                explication du contenue détaillant le projet
-            </p>
-        </section>
+        <a href="projet/projet1.html">
+            <section role="contentinfo" aria-valuetext="Projet 1">
+                <figure>
+                    <img src="Images/HTML5.png" alt="Projet1">
+                    <figcaption> Projet 1</figcaption>
+                </figure>
+                <h2>Projet 1</h2>
+                <p> Présentation Projet 1,
+                    <br>
+                    explication du contenue détaillant le projet
+                </p>
+            </section>
+        </a>
 
-        <section role="contentinfo" aria-valuetext="Projet 3">
-            <figure>
-                <img src="Images/Python.png" alt="Projet3">
-                <figcaption> Projet 3</figcaption>
-            </figure>
-            <h2>Projet 3</h2>
-            <p> Présentation Projet 3,
-                <br>
-                explication du contenue détaillant le projet
-            </p>
-        </section>
+        <a href="projet/projet2.html">
+            <section role="contentinfo" aria-valuetext="Projet 2">
+                <figure>
+                    <img src="Images/CSS3.png" alt="Projet2">
+                    <figcaption> Projet 2</figcaption>
+                </figure>
+                <h2>Projet 2</h2>
+                <p> Présentation Projet 2,
+                    <br>
+                    explication du contenue détaillant le projet
+                </p>
+            </section>
+        </a>
 
-        <section role="contentinfo" aria-valuetext="Projet 4">
-            <figure>
-                <img src="Images/Java.png" alt="Projet4">
-                <figcaption> Projet 4</figcaption>
-            </figure>
-            <h2>Projet 4</h2>
-            <p> Présentation Projet 4,
-                <br>
-                explication du contenue détaillant le projet
-            </p>
-        </section>
+        <a href="projet/projet3.html">
+            <section role="contentinfo" aria-valuetext="Projet 3">
+                <figure>
+                    <img src="Images/Python.png" alt="Projet3">
+                    <figcaption> Projet 3</figcaption>
+                </figure>
+                <h2>Projet 3</h2>
+                <p> Présentation Projet 3,
+                    <br>
+                    explication du contenue détaillant le projet
+                </p>
+            </section>
+        </a>
 
-        <section role="contentinfo" aria-valuetext="Projet 5">
-            <figure>
-                <img src="Images/C++.png" alt="Projet5">
-                <figcaption> Projet 5</figcaption>
-            </figure>
-            <h2>Projet 5</h2>
-            <p> Présentation Projet 5,
-                <br>
-                explication du contenue détaillant le projet
-            </p>
-        </section>
+        <a href="projet/projet4.html">
+            <section role="contentinfo" aria-valuetext="Projet 4">
+                <figure>
+                    <img src="Images/Java.png" alt="Projet4">
+                    <figcaption> Projet 4</figcaption>
+                </figure>
+                <h2>Projet 4</h2>
+                <p> Présentation Projet 4,
+                    <br>
+                    explication du contenue détaillant le projet
+                </p>
+            </section>
+        </a>
+
+        <a href="projet/projet5.html">
+            <section role="contentinfo" aria-valuetext="Projet 5">
+                <figure>
+                    <img src="Images/C++.png" alt="Projet5">
+                    <figcaption> Projet 5</figcaption>
+                </figure>
+                <h2>Projet 5</h2>
+                <p> Présentation Projet 5,
+                    <br>
+                    explication du contenue détaillant le projet
+                </p>
+            </section>
+        </a>
 
     </Main>
 
