--- a/projet/projet1.html
+++ b/projet/projet1.html
@@ -17,7 +17,7 @@
     <header role="banner">
         <div class="Logo">
             <figure>
-                <a href="index.html"><img src="../Images/IMG profil.png" alt="Image profil" img></a>
+                <a href="../index.html"><img src="../Images/IMG profil.png" alt="Image profil" img></a>
                 <figcaption>Logo</figcaption>
             </figure>
         </div>
@@ -31,14 +31,14 @@
     </header>
 
 
-
     <main>
+        <h1>Lorem ipsum dolor sit</h1>
         <section class="droite">
-            <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                <img src="../Images/HTML5.png" alt="ProjetX">
-                <figcaption> Projet 1</figcaption>
+            <figure class="imgprinci" role="img" aria-valuetext="Image représentant le projet">
+                <img src="../Images/X.png" alt="ProjetX">
+                <figcaption> Projet X</figcaption>
             </figure>
-            <section role="contentinfo" aria-valuetext="Texte explicant le projet">
+            <section>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Adipisci architecto numquam perspiciatis! Esse, inventore
@@ -63,42 +63,50 @@
 
         </section>
 
-        <section class="basdroite">
-            <section>
-                <h2>Projet 2</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/CSS3.png" alt="ProjetX">
-                    <figcaption> Projet 2</figcaption>
-                </figure>
-            </section>
-
-            <section>
-                <h2>Projet 3</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/Python.png" alt="ProjetX">
-                    <figcaption> Projet 3</figcaption>
-                </figure>
-            </section>
-
-            <section>
-                <h2>Projet 4</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/Java.png" alt="ProjetX">
-                    <figcaption> Projet 4</figcaption>
-                </figure>
-            </section>
 
 
-            <section>
-                <h2>Projet 5</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/C++.png" alt="ProjetX">
-                    <figcaption> Projet 5</figcaption>
-                </figure>
-            </section>
+        <ul>
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
 
-        </section>
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
 
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
+
+
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
+        </ul>
 
 
     </Main>
