--- a/projet/projet2.html
+++ b/projet/projet2.html
@@ -17,7 +17,7 @@
     <header role="banner">
         <div class="Logo">
             <figure>
-                <a href="index.html"><img src="../Images/IMG profil.png" alt="Image profil" img></a>
+                <a href="../index.html"><img src="../Images/IMG profil.png" alt="Image profil" img></a>
                 <figcaption>Logo</figcaption>
             </figure>
         </div>
@@ -31,11 +31,10 @@
     </header>
 
 
-
     <main>
         <h1>Lorem ipsum dolor sit</h1>
         <section class="droite">
-            <figure class="img" role="img" aria-valuetext="Image représentant le projet">
+            <figure class="imgprinci" role="img" aria-valuetext="Image représentant le projet">
                 <img src="../Images/X.png" alt="ProjetX">
                 <figcaption> Projet X</figcaption>
             </figure>
@@ -64,43 +63,50 @@
 
         </section>
 
-        <section class="basdroite">
-
-            <section>
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/X.png" alt="ProjetX">
-                    <figcaption> Projet X</figcaption>
-                </figure>
-            </section>
-
-            <section>
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/X.png" alt="ProjetX">
-                    <figcaption> Projet X</figcaption>
-                </figure>
-            </section>
-
-            <section>
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/X.png" alt="ProjetX">
-                    <figcaption> Projet X</figcaption>
-                </figure>
-            </section>
 
 
-            <section>
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <figure class="img" role="img" aria-valuetext="Image représentant le projet">
-                    <img class=basimg src="../Images/X.png" alt="ProjetX">
-                    <figcaption> Projet X</figcaption>
-                </figure>
-            </section>
+        <ul>
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
 
-        </section>
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
 
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
+
+
+            <a href="projetx.html">
+                <li>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure role="img" aria-valuetext="Image représentant le projet">
+                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
+                        <figcaption> Projet X</figcaption>
+                    </figure>
+                </li>
+            </a>
+        </ul>
 
 
     </Main>
