--- a/projet/projet1.html
+++ b/projet/projet1.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="stylesheet" href="../CSS/Projetx.css">
+    <link rel="stylesheet" href="../CSS/Var.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
@@ -35,8 +36,8 @@
         <h1>Lorem ipsum dolor sit</h1>
         <section class="droite">
             <figure class="imgprinci" role="img" aria-valuetext="Image représentant le projet">
-                <img src="../Images/X.png" alt="ProjetX">
-                <figcaption> Projet X</figcaption>
+                <img src="../Images/HTML5.png" alt="Projet1">
+                <figcaption> Projet 1</figcaption>
             </figure>
             <section>
                 <p>
@@ -66,43 +67,43 @@
 
 
         <ul>
-            <a href="projetx.html">
+            <a href="projet2.html">
                 <li>
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Projet 2</h2>
                     <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
-                        <figcaption> Projet X</figcaption>
+                        <img class=imgbas src="../Images/CSS3.png" alt="Projet2">
+                        <figcaption> Projet 2</figcaption>
                     </figure>
                 </li>
             </a>
 
-            <a href="projetx.html">
+            <a href="projet3.html">
                 <li>
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Projet 3</h2>
                     <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
-                        <figcaption> Projet X</figcaption>
+                        <img class=imgbas src="../Images/Python.png" alt="Projet3">
+                        <figcaption> Projet 3</figcaption>
                     </figure>
                 </li>
             </a>
 
-            <a href="projetx.html">
+            <a href="projet4.html">
                 <li>
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Projet 4</h2>
                     <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
-                        <figcaption> Projet X</figcaption>
+                        <img class=imgbas src="../Images/Java.png" alt="Projet4">
+                        <figcaption> Projet 4</figcaption>
                     </figure>
                 </li>
             </a>
 
 
-            <a href="projetx.html">
+            <a href="projet5.html">
                 <li>
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Projet 5</h2>
                     <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/X.png" alt="ProjetX">
-                        <figcaption> Projet X</figcaption>
+                        <img class=imgbas src="../Images/C++.png" alt="Projet5">
+                        <figcaption> Projet 5</figcaption>
                     </figure>
                 </li>
             </a>
