--- a/projet.html
+++ b/projet.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mes Projets - Benjamin Langlet</title>
     <link rel="stylesheet" href="CSS/Style.css">
     <link rel="stylesheet" href="CSS/Projet.css">
     <link rel="stylesheet" href="CSS/Var.css">
@@ -15,30 +15,29 @@
 </head>
 
 <body>
-    <header role="banner">
+    <header>
         <div class="Logo">
             <figure>
-                <a href="index.html"><img src="Images/IMG profil.png" alt="Image profil" img></a>
+                <a href="index.html"><img src="Images/IMG profil.png" alt="Photo de profil de Benjamin Langlet"></a>
                 <figcaption>Logo</figcaption>
             </figure>
         </div>
-        <nav>
+
+        <nav aria-label="Menu principal">
             <ul>
-                <li><a href="index.html "> Accueil </a></li>
-                <li><a href="projet.html"> Projets </a></li>
+                <li><a href="index.html"> Accueil </a></li>
+                <li><a href="projet.html" aria-current="page"> Projets </a></li>
                 <li><a href=""> Autre </a></li>
             </ul>
         </nav>
     </header>
 
-
-
-    <main role="main" class="projet">
+    <main class="projet">
 
         <a href="projet/projet1.html">
-            <section role="contentinfo" aria-valuetext="Projet 1">
+            <section>
                 <figure>
-                    <img src="Images/HTML5.png" alt="Projet1">
+                    <img src="Images/HTML5.png" alt="Logo HTML5">
                     <figcaption> Projet 1</figcaption>
                 </figure>
                 <h2>Projet 1</h2>
@@ -50,9 +49,9 @@
         </a>
 
         <a href="projet/projet2.html">
-            <section role="contentinfo" aria-valuetext="Projet 2">
+            <section>
                 <figure>
-                    <img src="Images/CSS3.png" alt="Projet2">
+                    <img src="Images/CSS3.png" alt="Logo CSS3">
                     <figcaption> Projet 2</figcaption>
                 </figure>
                 <h2>Projet 2</h2>
@@ -64,9 +63,9 @@
         </a>
 
         <a href="projet/projet3.html">
-            <section role="contentinfo" aria-valuetext="Projet 3">
+            <section>
                 <figure>
-                    <img src="Images/Python.png" alt="Projet3">
+                    <img src="Images/Python.png" alt="Logo Python">
                     <figcaption> Projet 3</figcaption>
                 </figure>
                 <h2>Projet 3</h2>
@@ -78,9 +77,9 @@
         </a>
 
         <a href="projet/projet4.html">
-            <section role="contentinfo" aria-valuetext="Projet 4">
+            <section>
                 <figure>
-                    <img src="Images/Java.png" alt="Projet4">
+                    <img src="Images/Java.png" alt="Logo Java">
                     <figcaption> Projet 4</figcaption>
                 </figure>
                 <h2>Projet 4</h2>
@@ -92,9 +91,9 @@
         </a>
 
         <a href="projet/projet5.html">
-            <section role="contentinfo" aria-valuetext="Projet 5">
+            <section>
                 <figure>
-                    <img src="Images/C++.png" alt="Projet5">
+                    <img src="Images/C++.png" alt="Logo C++">
                     <figcaption> Projet 5</figcaption>
                 </figure>
                 <h2>Projet 5</h2>
@@ -105,8 +104,7 @@
             </section>
         </a>
 
-    </Main>
-
+    </main>
 
     <footer>
         <ul>
