--- a/projet/projetx.html
+++ b/projet/projetx.html
@@ -20,7 +20,7 @@
             <figure>
                 <a href="../index.html"><img src="../Images/IMG profil.png"
                         alt="Photo de profil de Benjamin Langlet"></a>
-                <figcaption>Logo</figcaption>
+                <figcaption>Image profil</figcaption>
             </figure>
         </div>
         <nav aria-label="Menu principal">
