--- a/projet/projet1.html
+++ b/projet/projet1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Détail du Projet - Benjamin Langlet</title>
     <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="stylesheet" href="../CSS/Projetx.css">
     <link rel="stylesheet" href="../CSS/Var.css">
@@ -15,14 +15,15 @@
 </head>
 
 <body>
-    <header role="banner">
+    <header>
         <div class="Logo">
             <figure>
-                <a href="../index.html"><img src="../Images/IMG profil.png" alt="Image profil" img></a>
-                <figcaption>Logo</figcaption>
+                <a href="../index.html"><img src="../Images/IMG profil.png"
+                        alt="Photo de profil de Benjamin Langlet"></a>
+                <figcaption>Image profil</figcaption>
             </figure>
         </div>
-        <nav>
+        <nav aria-label="Menu principal">
             <ul>
                 <li><a href="../index.html "> Accueil </a></li>
                 <li><a href="../projet.html"> Projets </a></li>
@@ -34,11 +35,13 @@
 
     <main>
         <h1>Lorem ipsum dolor sit</h1>
+
         <section class="droite">
-            <figure class="imgprinci" role="img" aria-valuetext="Image représentant le projet">
-                <img src="../Images/HTML5.png" alt="Projet1">
-                <figcaption> Projet 1</figcaption>
+            <figure class="imgprinci">
+                <img src="../Images/X.png" alt="Vue détaillée du Projet X">
+                <figcaption> Projet X</figcaption>
             </figure>
+
             <section>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -61,56 +64,52 @@
                     Inventore illo neque non quam dicta sapiente laudantium a consectetur nihil.
                 </p>
             </section>
-
         </section>
 
 
-
         <ul>
-            <a href="projet2.html">
-                <li>
-                    <h2>Projet 2</h2>
-                    <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/CSS3.png" alt="Projet2">
-                        <figcaption> Projet 2</figcaption>
+            <li>
+                <a href="projetx.html">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure>
+                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
+                        <figcaption> Projet X</figcaption>
                     </figure>
-                </li>
-            </a>
+                </a>
+            </li>
 
-            <a href="projet3.html">
-                <li>
-                    <h2>Projet 3</h2>
-                    <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/Python.png" alt="Projet3">
-                        <figcaption> Projet 3</figcaption>
+            <li>
+                <a href="projetx.html">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure>
+                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
+                        <figcaption> Projet X</figcaption>
                     </figure>
-                </li>
-            </a>
+                </a>
+            </li>
 
-            <a href="projet4.html">
-                <li>
-                    <h2>Projet 4</h2>
-                    <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/Java.png" alt="Projet4">
-                        <figcaption> Projet 4</figcaption>
+            <li>
+                <a href="projetx.html">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure>
+                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
+                        <figcaption> Projet X</figcaption>
                     </figure>
-                </li>
-            </a>
+                </a>
+            </li>
 
-
-            <a href="projet5.html">
-                <li>
-                    <h2>Projet 5</h2>
-                    <figure role="img" aria-valuetext="Image représentant le projet">
-                        <img class=imgbas src="../Images/C++.png" alt="Projet5">
-                        <figcaption> Projet 5</figcaption>
+            <li>
+                <a href="projetx.html">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <figure>
+                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
+                        <figcaption> Projet X</figcaption>
                     </figure>
-                </li>
-            </a>
+                </a>
+            </li>
         </ul>
 
-
-    </Main>
+    </main>
 
 
     <footer>
