--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <section id="apropos">
-            <h2 id="iconpropos">A propos</h2>
+            <h2>A propos</h2>
             <p>
                 Je m'appelle Langlet Benjamin, j'ai 23 ans et actuellement en licence informatique a l'ulco de Calais.
                 <br>Je vie a Dunkerque et me deplace sur Calais pour suivre les cours.
