--- a/projet/projet1.html
+++ b/projet/projet1.html
@@ -38,8 +38,8 @@
 
         <section class="droite">
             <figure class="imgprinci">
-                <img src="../Images/X.png" alt="Vue détaillée du Projet X">
-                <figcaption> Projet X</figcaption>
+                <img src="../Images/HTML5.png" alt="Vue détaillée du Projet X">
+                <figcaption> Projet 1</figcaption>
             </figure>
 
             <section>
@@ -69,11 +69,11 @@
 
         <ul>
             <li>
-                <a href="projetx.html">
+                <a href="projet2.html">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <figure>
-                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
-                        <figcaption> Projet X</figcaption>
+                        <img class="imgbas" src="../Images/CSS3.png" alt="Aperçu du projet">
+                        <figcaption> Projet 2</figcaption>
                     </figure>
                 </a>
             </li>
@@ -82,8 +82,8 @@
                 <a href="projetx.html">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <figure>
-                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
-                        <figcaption> Projet X</figcaption>
+                        <img class="imgbas" src="../Images/Python.png" alt="Aperçu du projet">
+                        <figcaption> Projet 3</figcaption>
                     </figure>
                 </a>
             </li>
@@ -92,8 +92,8 @@
                 <a href="projetx.html">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <figure>
-                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
-                        <figcaption> Projet X</figcaption>
+                        <img class="imgbas" src="../Images/Java.png" alt="Aperçu du projet">
+                        <figcaption> Projet 4</figcaption>
                     </figure>
                 </a>
             </li>
@@ -102,8 +102,8 @@
                 <a href="projetx.html">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <figure>
-                        <img class="imgbas" src="../Images/X.png" alt="Aperçu du projet">
-                        <figcaption> Projet X</figcaption>
+                        <img class="imgbas" src="../Images/C++.png" alt="Aperçu du projet">
+                        <figcaption> Projet 5</figcaption>
                     </figure>
                 </a>
             </li>
